--- a/src/pages/styles/profile.scss
+++ b/src/pages/styles/profile.scss
@@ -318,7 +318,7 @@
 
     fieldset {
       border: 1px solid rgb(193, 207, 215);
-      padding: 5px 10px;
+      padding: 10px;
       border-radius: 2px;
       margin: 10px 0;
     }
@@ -337,6 +337,7 @@
       width: 100%;
       display: block;
       height: 15px;
+      padding: 4px 0;
     }
 
     input[type="submit"] {
